--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div></div>
       <div></div>
     </div>
-    <p class="word">Merry Christmas!</p>
+    <p class="word">Merry Christmas Yuko！!</p>
     <div class="tree">
       <div class="star">
         <div class="star-in"></div>
@@ -99,7 +99,7 @@
         <div></div>
       </div>
     </div>
-    <p class="blessing">Yuko！</p>
+    <p class="blessing"></p>
     <div class="music">
       <audio
         id="background-music"
