--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
         id="background-music"
         src="./Trans-Siberian Orchestra.mp3"
         preload="auto"
+        autoplay
       ></audio>
     </div>
   </body>
