--- a/index.html
+++ b/index.html
@@ -100,12 +100,9 @@
       </div>
     </div>
     <div class="music">
-      <audio
-        id="background-music"
-        src="./Trans-Siberian Orchestra.mp3"
-        preload="auto"
-        autoplay
-      ></audio>
+      <audio controls autoplay>
+        <source src="Trans-Siberian Orchestra.mp3" type="audio/mpeg" />
+      </audio>
     </div>
   </body>
 </html>
