--- a/index.html
+++ b/index.html
@@ -99,6 +99,16 @@
         <div></div>
       </div>
     </div>
+    <style>
+      .music {
+        text-align: center; /* Center the player */
+        margin: 20px;
+      }
+
+      audio {
+        width: 300px; /* Set the width of the audio player */
+      }
+    </style>
     <div class="music">
       <audio controls autoplay>
         <source src="Trans-Siberian Orchestra.mp3" type="audio/mpeg" />
