--- a/index.html
+++ b/index.html
@@ -99,7 +99,9 @@
         <div></div>
       </div>
     </div>
-    <p class="blessing">Hope you enjoy it with you family and I love you！</p>
+    <p class="blessing">
+      Hope you a good time with your family and I love you！
+    </p>
     <style>
       .music {
         text-align: center; /* Center the player */
