--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       </div>
     </div>
     <p class="blessing">
-      Hope you a good time with your family and I love you！
+      Hope you have a good time with your family and I love you！
     </p>
     <style>
       .music {
