--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <div></div>
       </div>
     </div>
-    <p class="blessing">Have a good time with your family and I love you！</p>
+    <p class="blessing">Enjoy your time with your family and I love you！</p>
     <style>
       .music {
         text-align: center; /* Center the player */
