--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
       }
     </style>
     <div class="music">
-      <audio controls autoplay>
-        <source src="Siberian.mp3" type="audio/mpeg" />
+      <audio id="backgroundMusic" autoplay muted>
+        <source src="Trans-Siberian Orchestra.mp3" type="audio/mpeg" />
       </audio>
     </div>
   </body>
