--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     </style>
     <div class="music">
       <audio id="backgroundMusic" autoplay muted>
-        <source src="Trans-Siberian Orchestra.mp3" type="audio/mpeg" />
+        <source src="Siberian.mp3" type="audio/mpeg" />
       </audio>
     </div>
   </body>
