--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       }
     </style>
     <div class="music">
-      <audio controls autoplay muted>
+      <audio controls autoplay>
         <source src="Siberian.mp3" type="audio/mpeg" />
       </audio>
     </div>
