--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       }
     </style>
     <div class="music">
-      <audio id="backgroundMusic" autoplay>
+      <audio id="backgroundMusic" preload="auto">
         <source src="Siberian.mp3" type="audio/mpeg" />
       </audio>
     </div>
