--- a/index.html
+++ b/index.html
@@ -113,9 +113,10 @@
       }
     </style>
     <div class="music">
-      <audio id="backgroundMusic" autoplay muted preload="auto">
+      <audio id="backgroundMusic" preload="auto">
         <source src="Siberian.mp3" type="audio/mpeg" />
       </audio>
+      <button id="playButton">Play Music</button>
     </div>
   </body>
 </html>
