--- a/index.html
+++ b/index.html
@@ -102,21 +102,36 @@
     <p class="blessing">
       Have a good time with your family and I love you so much!
     </p>
-    <style>
-      .music {
-        text-align: center; /* Center the player */
-        margin: 20px;
-      }
 
-      audio {
-        width: 300px; /* Set the width of the audio player */
-      }
-    </style>
+    <!-- Play Music Button -->
+    <button id="playMusicButton">Play Music</button>
+
     <div class="music">
       <audio id="backgroundMusic" preload="auto">
         <source src="Siberian.mp3" type="audio/mpeg" />
       </audio>
-      <button id="playButton">Play Music</button>
     </div>
+
+    <script>
+      window.onload = function () {
+        const music = document.getElementById("backgroundMusic");
+        const playButton = document.getElementById("playMusicButton");
+
+        // Set the audio to start at 30 seconds without playing yet
+        music.currentTime = 30;
+
+        // When the user clicks the Play button, start playing the audio
+        playButton.addEventListener("click", function () {
+          music
+            .play()
+            .then(() => {
+              console.log("Audio started playing from 30 seconds");
+            })
+            .catch((error) => {
+              console.error("Error playing audio:", error);
+            });
+        });
+      };
+    </script>
   </body>
 </html>
