--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
     <p class="blessing">
       Have a good time with your family and I love you so much!
     </p>
+    <button id="playButton">Play Music</button>
     <style>
       .music {
         text-align: center; /* Center the player */
